<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello Aisa!</string>
    <string name="app_name">金烩共襄音乐</string>
    <!-- main.xml String values -->
    <string name="toptext">欢迎进入主测试界面</string>
    <string name="newJob">新增工作</string>
    <string name="jobDetail">工作摘要</string>
    <string name="completeJob">已完成工作</string>
    <string name="tranferJob">已转介工作</string>
    <string name="download">资料下载</string>
    <string name="upload">资料上传</string>
    <string name="uerInfo">用户信息</string>
    <string name="exit">退出</string>
    <!-- login.xml -->
    <string name="loginBack">退出</string>
    <string name="login">登录</string>
    <string name="usernameHint">QQ号/微信号/手机号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <!-- start.xml -->
    <string name="right">All rights reserved.Ver.2.8</string>
    <string name="copyright">Copyright © 2007-2013 kaixin001.com</string>
    <string name="startpage">startpage</string>
    <!-- loading.xml -->
    <string name="loading">正在加载,请稍后...</string>

    <!-- MM -->
    <string name="app_cancel">取消</string>

    <string-array name="send_music_item">
        <item>分享给微信好友</item>
        <item>分享到微信朋友圈</item>
    </string-array>
    
    <string name="send_music">发送音乐</string>
     <string name="cannot_find">未找到歌词文件</string>
     
     <string name="searchlrc">搜索歌词</string>
     <string name="sleepmode">睡眠模式</string>
     <string name="setting">设置</string>
     
     <string name="search_hint">歌曲，歌手，专辑，歌名</string>
     <string-array name="download_music_item">
        <item>下载音乐</item>
        <item>分享</item>
    </string-array>
     <string name="down_info">请选择</string>
     
         <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
     <!-- add info dialog -->
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>

</resources>