<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView 
        android:id="@+id/startpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/starlogo_newyear"
        android:contentDescription="@string/startpage"
        android:scaleType="centerCrop"/>
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" 
        android:paddingBottom="20dip">
       <TextView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textColor="#ff888888"
            android:textSize="12sp" 
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="#ff888888"
            android:textSize="12sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/right"
            android:gravity="center" />
        
    </RelativeLayout>
</RelativeLayout>