<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#eee"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    <RelativeLayout 
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar">
        <!-- android:layout_centerVertical="true" 表示子控件在父控件中垂直居中 -->       <Button
           android:id="@+id/login_back_btn"
           android:layout_width="70dp"
           android:layout_height="wrap_content"
           android:background="@drawable/title_btn_back"
           android:text="@string/loginBack"
           android:textSize="14sp"
           android:textColor="#fff"
           android:onClick="loginback"
           android:layout_centerVertical="true"/>
       <TextView
           android:id="@+id/loginTextView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="#ffffff"
           android:layout_centerInParent="true"/>"
        
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/centerLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/topLayout"
        android:gravity="center_horizontal"
        android:padding="10dp" 
        android:layout_marginTop="25dp">
       <EditText
           android:id="@+id/username"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:singleLine="true"
           android:textColor="#000"
	       android:textSize="15sp"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:hint="@string/usernameHint"
           android:background="@drawable/login_editbox"/> 
       <EditText
           android:id="@+id/password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="25dp"
           android:textColor="#000"
	       android:textSize="15sp"
           android:inputType="textPassword"
           android:hint="@string/passwordHint"
           android:layout_below="@id/username"
           android:layout_alignLeft="@id/username"
           android:layout_alignRight="@id/username"
           android:background="@drawable/login_editbox"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/bottomlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" 
        android:layout_below="@id/centerLayout">
       <Button 
           android:id="@+id/forgetbtn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
	       android:textColor="#00f"
	       android:background="#0000"
           android:text="@string/forgetpassword"/>
       <Button
           android:id="@+id/loginbtn"
           android:layout_width="90dp"
	       android:layout_height="40dp"
           android:layout_alignParentRight="true"
           android:textColor="#ffffff"
	       android:textSize="18sp"
	       android:background="@drawable/btn_style_green"
           android:text="@string/login"
           android:onClick="login"/> 
    </RelativeLayout>

</RelativeLayout>