<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <RelativeLayout
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:layout_alignParentTop="true" >
      <!-- 该控件在其父组件的中间：android:layout_centerInParent -->
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#ffffff"
          android:text="@string/toptext"
          android:layout_centerInParent="true"/>
    </RelativeLayout>
    <!-- android:gravity="center_horizontal" 其内控件的摆放位置 -->
    <RelativeLayout 
        android:id="@+id/centerLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toplayout"
        android:gravity="center_horizontal"
        android:padding="10dp">
      <Button 
          android:id="@+id/button1"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_marginRight="20dp"
          android:background="@drawable/pss0100_button1"
          android:onClick="pressBtn1"/>
      <TextView 
          android:id="@+id/textview1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#000000"
          android:text="@string/newJob"
          android:layout_below="@id/button1"
          android:layout_alignLeft="@id/button1"
          android:layout_alignRight="@id/button1"
          android:gravity="center_horizontal"/>
      <Button 
          android:id="@+id/button2"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_toRightOf="@id/button1"
          android:background="@drawable/pss0100_button1"/>
       <TextView 
          android:id="@+id/textview2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#000000"
          android:text="@string/jobDetail"
          android:layout_below="@id/button2"
          android:layout_alignRight="@id/button2"
          android:layout_alignLeft="@id/button2"
          android:gravity="center_horizontal"/>
                      
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/centerLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLayout1"
        android:gravity="center_horizontal"
        android:padding="10dp">
      <Button 
          android:id="@+id/button3"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_marginRight="20dp"
          android:background="@drawable/pss0100_button1"/>
      <TextView 
          android:id="@+id/textview3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#000000"
          android:text="@string/completeJob"
          android:layout_below="@id/button3"
          android:layout_alignLeft="@id/button3"
          android:layout_alignRight="@id/button3"
          android:gravity="center_horizontal"/>
      <Button 
          android:id="@+id/button4"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_toRightOf="@id/button3"
          android:background="@drawable/pss0100_button1"/>
       <TextView 
          android:id="@+id/textview4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="#000000"
          android:text="@string/tranferJob"
          android:layout_below="@id/button4"
          android:layout_alignRight="@id/button4"
          android:layout_alignLeft="@id/button4"
          android:gravity="center_horizontal"/>
                      
    </RelativeLayout>
    
</RelativeLayout>
